Avoid copying NV12 GL_TEXTURE_EXTERNAL_OES textures for use with skia.

Skia can now handle reading from GL_TEXTURE_EXTERNAL_OES textures. It'll
immediately do a conversion from YUV to RGB and release the input
texture, so we don't need to worry about the texture lifetime.

BUG=625900,505026

Review-Url: https://codereview.chromium.org/2126053002
Cr-Commit-Position: refs/heads/master@{#404042}

Former-commit-id: 48ec0365657930e8428945f8090432b05f42f14e